feat: add hardened email service reference